--- a/expansao.html
+++ b/expansao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expansão de Domínio</title>
-    <link rel="stylesheet" href="/css/expansao.css">
+    <link rel="stylesheet" href="css/expansao.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;800&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
